--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
   font-optical-sizing: auto;
   font-style: normal;
 }
+body{
+  margin-top: 0px;
+  margin-right: 0px;
+}
 
 /* -----------------Share Styles----------------------- */
 .display-none {
